--- a/fitsmeright/Main/Info.plist
+++ b/fitsmeright/Main/Info.plist
@@ -45,5 +45,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>This app requires access to the photo library.</string>
+  <key>NSCameraUsageDescription</key>
+  <string>This app requires access to the camera.</string>
 </dict>
 </plist>
